# Price-Comparison-Extension

./: README.md  pyproject.toml  requirements.md  saves.csv  users.csv
price_comparision_extension/: app copy.py  app.py  auto.py  automation.py  new.py  saves.csv
price_comparision_extension/face_detection/: face_capture.py  face_rec.py
price_comparision_extension/modules/: e_bay.py  etsy.py  helpres.py  newegg.py  walmart.py
test/: e_bay.py  etsy.py  newegg.py  shops.py  walmart.py
walmart/: pyproject.toml  walmart_data.csv
walmart/tests/: test_walmart.py
walmart/walmart.egg-info/: PKG-INFO  SOURCES.txt
