[tool.poetry]
name = "price-comparison-extension"
version = "0.1.0"
description = ""
authors = ["Mohammadnim123 <mm.nemrawi96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
panda = "^0.3.1"
cmake = "^3.18.2"
dlib = "^19.21.0"
face-recognition = "^1.3.0"
numpy = "^1.19.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
